Fix: spacing of intro text of Tree Game

--- a/src/pages/ClearTheTreePage/Game/ClearTheTreeGame.module.css
+++ b/src/pages/ClearTheTreePage/Game/ClearTheTreeGame.module.css
@@ -1,5 +1,6 @@
 .introText {
   word-wrap: break-word;
+  padding-bottom: 20px;
 }
 
 .button {
